--- a/diffusion_model_hands_on.ipynb
+++ b/diffusion_model_hands_on.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Sangwoong Yoon** (AI Research Fellow @ KIAS; http://swyoon.github.io )\n",
     "\n",
-    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)]((https://colab.research.google.com/github/swyoon/kias-hyu-diffusion-tutorial-2023/diffusion_model_hands_on.ipynb)[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)]((https://colab.research.google.com/github/swyoon/kias-hyu-diffusion-tutorial-2023/diffusion_model_hands_on.ipynb)\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/swyoon/kias-hyu-diffusion-tutorial-2023/blob/main/diffusion_model_hands_on.ipynb)\n",
     "\n",
     "**Abstract**\n",
     "\n",
@@ -23,39 +23,21 @@
     "2. Diffusion\n",
     "3. Neural Networks\n",
     "4. Training\n",
-    "5. Performance Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "104600cd-46a6-4cde-95c4-04e80ffcf0ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from torch.optim import Adam\n",
-    "from torch.distributions import MultivariateNormal, Normal\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "import os\n",
+    "5. Performance Evaluation\n",
     "\n",
+    "**Exercise**\n",
     "\n",
-    "from models.modules import FCNet\n",
-    "from ipywidgets import Output\n",
-    "from IPython.display import clear_output\n",
-    "from tqdm.auto import tqdm \n",
+    "* Vary the following variables and see if the performance remains the same:\n",
+    "    * dataset\n",
+    "    * the number of diffusion time steps\n",
+    "    * beta (sigma) schedule\n",
+    "    * scale of data\n",
+    "    * the number of diffusion time steps\n",
     "\n",
+    "**Further Reading**\n",
     "\n",
-    "from models.GCD.v1 import PGDensityEstimator, EnergyBasedModel\n",
-    "from models.GCD.modules import ConditionalModel, FCNet_temb\n",
-    "from models.mmd import mmd\n",
-    "from loader.synthetic import sample2d, pdf_8gaussian\n"
+    "* https://github.com/openai/guided-diffusionhttps://github.com/openai/guided-diffusion\n",
+    "* https://github.com/CompVis/latent-diffusionhttps://github.com/CompVis/latent-diffusion"
    ]
   },
   {
@@ -98,7 +80,7 @@
     "from torch.distributions import Normal\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm"
    ]
   },
   {
