--- a/diffusion_model_hands_on.ipynb
+++ b/diffusion_model_hands_on.ipynb
@@ -13,17 +13,20 @@
     "\n",
     "**Abstract**\n",
     "\n",
-    "Today, we will study a minimal working example of [Denoising Diffusion Probabilistic Model (DDPM); Ho et al., 2020](https://arxiv.org/abs/2006.11239).\n",
-    "Instead of reproducing fancy results from large-scale models, we shall focus on finding out what is exactly going on inside a very small model \n",
+    "> Today, we will study a minimal working example of [Denoising Diffusion Probabilistic Model (DDPM); Ho et al., 2020](https://arxiv.org/abs/2006.11239).\n",
+    "> Instead of reproducing fancy results from large-scale models, we shall focus on understanding what is exactly going on inside a very small model.\n",
+    "> We will run a vanilla DDPM on 2D datasets and investigate when it works well and when it doesn't.\n",
+    "\n",
     "\n",
     "\n",
     "**Table of Contents**\n",
     "\n",
     "1. Data Generation\n",
     "2. Diffusion\n",
-    "3. Neural Networks\n",
-    "4. Training\n",
-    "5. Performance Evaluation\n",
+    "3. DDPM\n",
+    "4. Neural Networks\n",
+    "5. Training\n",
+    "6. Performance Evaluation\n",
     "\n",
     "**Exercise**\n",
     "\n",
@@ -112,21 +115,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "51e66554-9610-4564-a4fd-0f838628439f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-11-01T16:04:02.412283Z",
-     "iopub.status.busy": "2023-11-01T16:04:02.411558Z",
-     "iopub.status.idle": "2023-11-01T16:04:02.418691Z",
-     "shell.execute_reply": "2023-11-01T16:04:02.416984Z",
-     "shell.execute_reply.started": "2023-11-01T16:04:02.412213Z"
-    },
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "db943da8-948b-4166-be2d-271204f02bef",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from data import sample2d"
+    "'''\n",
+    "Synthetic distributions from https://github.com/nicola-decao/BNAF/\n",
+    "'''\n",
+    "def sample2d(data, batch_size=200, scale_factor=1.):\n",
+    "    rng = np.random.RandomState()\n",
+    " \n",
+    "    if data == '8gaussians':\n",
+    "        scale = 4.\n",
+    "        centers = [(1, 0), (-1, 0), (0, 1), (0, -1), (1. / np.sqrt(2), 1. / np.sqrt(2)),\n",
+    "                   (1. / np.sqrt(2), -1. / np.sqrt(2)), (-1. / np.sqrt(2),\n",
+    "                                                         1. / np.sqrt(2)), (-1. / np.sqrt(2), -1. / np.sqrt(2))]\n",
+    "        centers = [(scale * x, scale * y) for x, y in centers]\n",
+    "\n",
+    "        dataset = []\n",
+    "        for i in range(batch_size):\n",
+    "            point = rng.randn(2) * 0.5\n",
+    "            idx = rng.randint(8)\n",
+    "            center = centers[idx]\n",
+    "            point[0] += center[0]\n",
+    "            point[1] += center[1]\n",
+    "            dataset.append(point)\n",
+    "        dataset = np.array(dataset, dtype='float32')\n",
+    "        dataset /= 1.414\n",
+    "        dataset *= scale_factor\n",
+    "        return dataset\n",
+    "\n",
+    "    elif data == '2spirals':\n",
+    "        n = np.sqrt(np.random.rand(batch_size // 2, 1)) * 540 * (2 * np.pi) / 360\n",
+    "        d1x = -np.cos(n) * n + np.random.rand(batch_size // 2, 1) * 0.5\n",
+    "        d1y = np.sin(n) * n + np.random.rand(batch_size // 2, 1) * 0.5\n",
+    "        x = np.vstack((np.hstack((d1x, d1y)), np.hstack((-d1x, -d1y)))) / 3\n",
+    "        x += np.random.randn(*x.shape) * 0.1\n",
+    "        x *= scale_factor\n",
+    "        return x\n",
+    "\n",
+    "    elif data == 'checkerboard':\n",
+    "        x1 = np.random.rand(batch_size) * 4 - 2\n",
+    "        x2_ = np.random.rand(batch_size) - np.random.randint(0, 2, batch_size) * 2\n",
+    "        x2 = x2_ + (np.floor(x1) % 2)\n",
+    "        dataset = np.concatenate([x1[:, None], x2[:, None]], 1) * 2\n",
+    "        dataset *= scale_factor\n",
+    "        return dataset\n",
+    " \n",
+    "    else:\n",
+    "        raise RuntimeError"
    ]
   },
   {
